--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
+    "vue2-smooth-scroll": "^1.5.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
